# downd

./: Cargo.toml  LICENSE-MIT  README.md  justfile
src/: commands.rs  delayed_stream.rs  downloader.rs  main.rs  queue.rs  rollingrate.rs  testcode.rs  tracker.rs  unixsocket.rs  webapp.rs  ytdlp.rs
src/tracker/: rollingrate.rs
src/unixsocket/: parser.rs
src/ytdlp/: parser.rs
templates/: hello.html  root.html  sse_update.html
