[package]
name = "downd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["full"]}
tokio-stream = {version = "*", features = ["full"]}
nom = "*"
warp = {version = "*"}
tracing = "*"
tracing-subscriber = "*"
askama = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
clap = {version = "*", features = ["derive", "env"]}

futures-util = "*"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
